// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders accept colours correctly 1`] = `
<div>
  <span
    class="sc-bdnxRM sc-dlnjwi eoyzcM hsTqCw"
  >
    Button
  </span>
  ,
</div>
`;

exports[`Button component renders normal colours correctly 1`] = `
<div>
  <span
    class="sc-bdnxRM sc-gtsrHT eoyzcM fTsZmm"
  >
    Button
  </span>
  ,
</div>
`;
